syntax = "proto3";

package grill.v1;

import "grill/v1/rpc_ping.proto";
import "grill/v1/rpc_create_user.proto";
import "grill/v1/rpc_login_user.proto";
import "grill/v1/rpc_logout_user.proto";
import "grill/v1/rpc_get_users.proto";
import "grill/v1/rpc_refresh_token.proto";
import "grill/v1/rpc_get_agents.proto";
import "grill/v1/rpc_create_agent.proto";
import "grill/v1/rpc_toggle_agent.proto";
import "grill/v1/rpc_send_agent_payload.proto";
import "grill/v1/rpc_register_agent.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Grill API";
    version: "0.1.0";
    contact: {
      name: "Grill API";
      url: "https://github.com/zcubbs/grill";
      email: "zcubbs@pm.me";
    };
  };
};

service GrillService {
  rpc Ping (PingRequest) returns (PingResponse){
    option (google.api.http) = {
      get: "/v1/ping"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Ops"
      summary: "Ping the server";
      description: "Ping the server";
    };
  }

  rpc CreateAgent(CreateAgentRequest) returns (CreateAgentResponse){
    option (google.api.http) = {
      post: "/v1/create_agent"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Agent"
      summary: "Create Agent";
      description: "Create a new agent";
    };
  }

  rpc ToggleAgent(ToggleAgentRequest) returns (ToggleAgentResponse){
    option (google.api.http) = {
      post: "/v1/toggle_agent"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Agent"
      summary: "Toggle Agent";
      description: "Toggle an agent's status";
    };
  }

  rpc GetAgents(GetAgentsRequest) returns (GetAgentsResponse){
    option (google.api.http) = {
      get: "/v1/get_agents"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Agent"
      summary: "Get Agents";
      description: "Get all agents";
    };
  }

  rpc RegisterAgent (RegisterAgentRequest) returns (RegisterAgentResponse){
    option (google.api.http) = {
      post: "/v1/agent/register"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Agent"
      summary: "Register an agent"
      description: "Register an agent with the server"
      responses: {
        key: "200"
        value: {
          description: "Success"
          schema: {
            json_schema: {type: STRING}
          }
        }
      }
    };
  }

  rpc SendAgentPayload (SendAgentPayloadRequest) returns (SendAgentPayloadResponse){
    option (google.api.http) = {
      post: "/v1/agent/payload"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "Agent"
      summary: "Send a payload"
      description: "Send a payload to the server"
      responses: {
        key: "200"
        value: {
          description: "Success"
          schema: {
            json_schema: {type: STRING}
          }
        }
      }
    };
  }

  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/v1/user/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "User"
      summary: "Create a user"
      description: "Create a user"
      responses: {
        key: "200"
        value: {
          description: "Success"
          schema: {
            json_schema: {type: STRING}
          }
        }
      }
    };
  }

  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "User"
      summary: "Login a user"
      description: "Login a user"
      responses: {
        key: "200"
        value: {
          description: "Success"
          schema: {
            json_schema: {type: STRING}
          }
        }
      }
    };
  }

  rpc LogoutUser (LogoutUserRequest) returns (LogoutUserResponse){
    option (google.api.http) = {
      post: "/v1/user/logout"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "User"
      summary: "Logout a user"
      description: "Logout a user"
      responses: {
        key: "200"
        value: {
          description: "Success"
          schema: {
            json_schema: {type: STRING}
          }
        }
      }
    };
  }

  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/refresh_token"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "User"
      summary: "Refresh a user's access token";
      description: "Refresh a user's access token";
    };
  }

  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse){
    option (google.api.http) = {
      get: "/v1/user/get"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: "User"
      summary: "Get all users"
      description: "Get all users"
      responses: {
        key: "200"
        value: {
          description: "Success"
          schema: {
            json_schema: {type: STRING}
          }
        }
      }
    };
  }

}
